2011-03-07 Magnus Hagdorn
 * merge trunk r1887:1888

2011-03-04 Magnus Hagdorn
 * merge trunk r2098:2224

2010-07-05 Magnus Hagdorn
 * configure.in: bumped version to 1.6.1

2010-07-05 Magnus Hagdorn
 * configure.in: always generate libphaml/Makefile so sources get distributed
 * libphaml/Makefile.am: do not distribute external files

2010-07-05 Magnus Hagdorn
 * ChangeLOg: bring Bill and myself back from the future
 * NEWS: updated
 * configure.in: bumped version to 1.6.0

2010-07-02 William Lipscomb
  * Moved glimmer_restart_gcm.F90 from libglimmer to libglide.
    Required because of dependency on glide_types
     	
2011-07-02 William Lipscomb
  * Various changes to make the Glimmer-CISM source code consistent with the latest 
    version of CESM:
  * Removed ifdefs and replaced them with 'if (GLC_DEBUG)' since ifdefs are highly
    discouraged in CESM code.  May remove some of these later.
  * Added new module glimmer_restart_gcm	
  * Modified the procedure for reading and writing restarts such that there are
    no gcm dependencies in the Glimmer-CISM source code.
 	    
2011-06-21 Magnus Hagdorn
 * scripts/qsub_glide.sh: undo last change which broke it

2010-06-17 Magnus Hagdorn
 * configure.in: set F77 to FC if not set; fix generation of files
 * tests/exact-isothermal/src/Makefile.am: minor change

2010-06-16 William Lipscomb
  * I had previously changed the name of glimmer_writestats_module to glimmer_writestats
    to satisfy the CESM convention that module and file names should agree.
    I had also changed subroutine glimmer_writestats to glimmer_write_stats so that it
    would not conflict with the new module name.
    With this commit I changed use statements and subroutine calls in various modules accordingly.
  * Commented out references to CESM restart code in glint_initialise.F90.
    Will find a more flexible solution later.
  * Changed Makefile.am in libglint and example_drivers/glint/src, to reflect that