@@ -1,3 +1,32 @@
+/* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+   +                                                              +
+   +  writestats.c - part of the Glimmer-CISM ice model           +
+   +                                                              +
+   ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+
+   Copyright (C) 2009, 2010
+   Glimmer-CISM contributors - see AUTHORS file for list of contributors
+
+   This file is part of Glimmer-CISM.
+
+   Glimmer-CISM is free software: you can redistribute it and/or modify
+   it under the terms of the GNU General Public License as published by
+   the Free Software Foundation, either version 2 of the License, or (at
+   your option) any later version.
+
+   Glimmer-CISM is distributed in the hope that it will be useful,
+   but WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+   GNU General Public License for more details.
+
+   You should have received a copy of the GNU General Public License
+   along with Glimmer-CISM.  If not, see <http://www.gnu.org/licenses/>.
+
+   Glimmer-CISM is hosted on BerliOS.de:
+   https://developer.berlios.de/projects/glimmer-cism/
+
+ +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
+
 #include "cfortran.h"
 #include "writestats.h"
 #include "config.inc"
