@@ -1,3 +1,6 @@
+2011-07-04 Ian Rutt
+ * Formatting changes for ease of comparison with glimmer-cism2-lanl
+
 2011-03-07 Magnus Hagdorn
  * merge trunk r1887:1888
 
